# aurora-toolbot

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
docker/: _env  compose.yml  nginx.conf
public/: index.html  manifest.json
src/: App.css  App.js  App.jsx  AppRoute.jsx  index.js  main.jsx
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/feature/: app_auth_login.rs  app_auth_logout.rs  app_info.rs  app_open_dir.rs  app_open_file.rs  demo_app_info.rs  device_info.rs  device_package_install.rs  device_package_run.rs  device_package_uninstall.rs  device_screenshot.rs  device_sync.rs  device_terminal.rs  device_upload.rs  emulator_close.rs  emulator_info.rs  emulator_open.rs  emulator_package_install.rs  emulator_package_run.rs  emulator_package_uninstall.rs  emulator_record_start.rs  emulator_record_stop.rs  emulator_screenshot.rs  emulator_sync.rs  emulator_terminal.rs  emulator_upload.rs  flutter_available.rs  flutter_download.rs  flutter_info.rs  flutter_install.rs  flutter_project_format.rs  flutter_project_report.rs  flutter_sync.rs  flutter_terminal.rs  flutter_uninstall.rs  methods.rs  mod.rs  psdk_available.rs  psdk_download.rs  psdk_info.rs  (+19 more)
src-tauri/src/tools/: client.rs  constants.rs  methods.rs  mod.rs  state.rs  theme.rs
src-tauri/src/tools/methods/: app.rs  demo_app.rs  device.rs  emulator.rs  faq.rs  flutter.rs  mod.rs  psdk.rs  sdk.rs
src/base/: index.js  index.jsx
src/conf/: AppConf.js  AppConf.jsx
(+222 files in other folders)
