[package]
name = "toolbot"
version = "0.0.1"
description = "Module js for native application Toolbot."
authors = ["keygenqt@gmail.com"]
edition = "2024"

[lib]
name = "toolbot"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dbus = "0.9.7"
darkmode = "0.1.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }
